crates/parser/tests/cases/snapshots/cases__errors__self_use2.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(self_use2), module::parse_module, \"use bar as self\")"

---
error: failed to parse `use` tree
  ┌─ self_use2:1:12
  │
1 │ use bar as self
  │            ^^^^ expected a name, found keyword `self`


